package me.rogerioferreira.lavajato.domain.enums;

public enum ServiceType {
  BASIC,
  COMPLETE
}
