package me.rogerioferreira.lavajato.domain.enums;

public enum VehicleType {
  CAR,
  MOTORCYCLE
}
