@startuml
class WashingYard {
  - List<WashingPlace> washingPlaces
  - OffsetTime openingTime
  - OffsetTime closingTime
}

class WashingPlace {
  - Integer position
}

class Vehicle {
  - VehicleType vehicleType
  - String ownerName;
  - String licensePlate;
  - String color;
  - String model;
  - String brand;
}

class ServicePrice {
  - ServiceType serviceType
  - BigDecimal price
}

class Operator {
  - String name
}

class WashingService {
  - Operator operator
  - Vehicle vehicle
  - WashingPlace washingPlace
  - ServiceType serviceType
  - WashingServiceStatus status
  - OffsetDateTime serviceTime
  - WashingServiceStatus status
  - BigDecimal totalToPay
}

enum WashingServiceStatus {
  + WAITING
  + IN_PROGRESS
  + FINISHED
  + CANCELED
}

enum VehicleType {
  + MOTORCYCLE
  + CAR
}

enum ServiceType {
  + BASIC
  + COMPLETE
}

WashingService "*" --* "1" Vehicle
WashingService "*" --* "1" Operator
WashingService "*" --* "1" WashingPlace
WashingService --* WashingServiceStatus
WashingService --* ServiceType
WashingService -- ServicePrice

Vehicle --* VehicleType

WashingYard "1" --* "*" WashingPlace

ServicePrice --* ServiceType

@enduml
